# syncsub

./: .gitignore  README.en.md  README.md  README.zh-CN.md  install-windows.cmd  pyproject.toml
.github/workflows/: release.yml
platform/macos/字幕按内嵌时间轴对齐.workflow/Contents/: Info.plist  document.wflow
platform/windows/: gui_entry.py  install.ps1  installer.iss  syncsub-gui.cmd  syncsub.spec
scripts/: install-macos.sh
src/syncsub/: __init__.py  cli.py  core.py  deps.py  detect.py  finder.py  gui.py  i18n.py  naming.py  reveal.py
